--- a/Classes/ColorDialog.cls
+++ b/Classes/ColorDialog.cls
@@ -84,12 +84,12 @@ End Type                      '  Sum: 36 ' Sum: 72
     Private Declare Function CommDlgExtendedError Lib "comdlg32" () As Long
 #End If
 
-Private mFlags As Long
+Private m_Flags As Long
 Private Const MaxCustomColors As Long = 16
-Private mCustomColors() As Long 'mehr als 16 sind im Dialog gar nicht möglich
+Private m_CustomColors() As Long 'mehr als 16 sind im Dialog gar nicht möglich
 'wenn der Cancel-Button gedrückt wurde dann soll auch die alte Farbtabelle wiederhergestellt werden
-Private mColor As Long
-Private mTemplateName As String
+Private m_Color As Long
+Private m_TemplateName As String
 
 Private Sub Class_Initialize()
     '
@@ -101,12 +101,12 @@ End Sub
 Public Property Get AllowFullOpen() As Boolean
     ' Ruft einen Wert ab, der angibt, ob im Dialogfeld benutzerdefinierte Farben definiert
     ' werden können, oder legt diesen fest.
-    AllowFullOpen = Not (mFlags And CC_PREVENTFULLOPEN)
+    AllowFullOpen = Not (m_Flags And CC_PREVENTFULLOPEN)
 End Property
 Public Property Let AllowFullOpen(ByVal Value As Boolean)
-    mFlags = mFlags Or CC_PREVENTFULLOPEN
+    m_Flags = m_Flags Or CC_PREVENTFULLOPEN
     If Value Then
-        mFlags = mFlags Xor CC_PREVENTFULLOPEN
+        m_Flags = m_Flags Xor CC_PREVENTFULLOPEN
     End If
 End Property
 'Public Overridable Property FullOpen() As Boolean
@@ -114,12 +114,12 @@ Public Property Get FullOpen() As Boolean
     ' Ruft einen Wert ab, der angibt, ob die Steuerelemente für das Erstellen
     ' benutzerdefinierter Farben beim Öffnen des Dialogfelds angezeigt werden,
     ' oder legt diesen fest.
-    FullOpen = Not (mFlags And CC_FULLOPEN)
+    FullOpen = Not (m_Flags And CC_FULLOPEN)
 End Property
 Public Property Let FullOpen(ByVal Value As Boolean)
-    mFlags = mFlags Or CC_FULLOPEN
+    m_Flags = m_Flags Or CC_FULLOPEN
     If Not Value Then
-        mFlags = mFlags Xor CC_FULLOPEN
+        m_Flags = m_Flags Xor CC_FULLOPEN
     End If
 End Property
 
@@ -127,22 +127,22 @@ End Property
 Public Property Get AnyColor() As Boolean
     ' Ruft einen Wert ab, der angibt, ob im Dialogfeld bei den Grundfarben alle verfügbaren
     ' Farben angezeigt werden, oder legt diesen fest.
-    AnyColor = (mFlags And CC_ANYCOLOR)
+    AnyColor = (m_Flags And CC_ANYCOLOR)
 End Property
 Public Property Let AnyColor(ByVal Value As Boolean)
-    mFlags = mFlags Or CC_ANYCOLOR
+    m_Flags = m_Flags Or CC_ANYCOLOR
     If Not Value Then
-        mFlags = mFlags Xor CC_ANYCOLOR
+        m_Flags = m_Flags Xor CC_ANYCOLOR
     End If
 End Property
 
 'Public Property Color() As System.Drawing.Color
 Public Property Get Color() As Long 'System.Drawing.Color
     ' Ruft die von den Benutzern ausgewählte Farbe ab oder legt diese fest.
-    Color = mColor
+    Color = m_Color
 End Property
 Public Property Let Color(ByVal Value As Long)  'System.Drawing.Color
-    mColor = Value
+    m_Color = Value
 End Property
 
 'Public Property CustomColors() As Integer()
@@ -150,11 +150,11 @@ Public Property Get CustomColors(ByVal Index As Long) As Long 'Integer()
     ' Ruft den im Dialogfeld angezeigten Satz benutzerdefinierter Farben ab
     ' oder legt diesen fest.
     If Index > 16 Then Exit Property
-    CustomColors = mCustomColors(Index)
+    CustomColors = m_CustomColors(Index)
 End Property
 Public Property Let CustomColors(ByVal Index As Long, ByVal Value As Long) 'Integer()
     If Index > 16 Then Exit Property
-    mCustomColors(Index) = Value
+    m_CustomColors(Index) = Value
 End Property
 
 'Public Overrides Sub Reset()
@@ -162,24 +162,24 @@ Public Sub Reset()
     ' Setzt alle Optionen auf die Standardwerte, die zuletzt ausgewählte Farbe auf
     ' schwarz und die benutzerdefinierten Farben auf die Standardwerte zurück.
     ' welche Standardwerte der UD Farben?
-    mFlags = mFlags Or CC_RGBINIT
-    mFlags = mFlags Or CC_ANYCOLOR
-    mFlags = mFlags Or CC_FULLOPEN
-    mFlags = mFlags Or CC_PREVENTFULLOPEN
-    mColor = vbBlack '&H0& 'Schwarz '
-    ReDim mCustomColors(0 To MaxCustomColors - 1) 'As Long 'mehr als 16 sind im Dialog gar nicht möglich
+    m_Flags = m_Flags Or CC_RGBINIT
+    m_Flags = m_Flags Or CC_ANYCOLOR
+    m_Flags = m_Flags Or CC_FULLOPEN
+    m_Flags = m_Flags Or CC_PREVENTFULLOPEN
+    m_Color = vbBlack '&H0& 'Schwarz '
+    ReDim m_CustomColors(0 To MaxCustomColors - 1) 'As Long 'mehr als 16 sind im Dialog gar nicht möglich
 End Sub
 
 'Public Overridable Property ShowHelp() As Boolean
 Public Property Get ShowHelp() As Boolean
     ' Ruft einen Wert ab, der angibt, ob im Dialogfeld Farbe die Hilfeschaltfläche
     ' angezeigt wird, oder legt diesen fest.
-    ShowHelp = (mFlags And CC_SHOWHELP)
+    ShowHelp = (m_Flags And CC_SHOWHELP)
 End Property
 Public Property Let ShowHelp(ByVal Value As Boolean)
-    mFlags = mFlags Or CC_SHOWHELP
+    m_Flags = m_Flags Or CC_SHOWHELP
     If Not Value Then
-        mFlags = mFlags Xor CC_SHOWHELP
+        m_Flags = m_Flags Xor CC_SHOWHELP
     End If
 End Property
 
@@ -187,12 +187,12 @@ End Property
 Public Property Get SolidColorOnly() As Boolean
     ' Ruft einen Wert ab, der angibt, ob Benutzer im Dialogfeld ausschließlich
     ' Volltonfarben auswählen können, oder legt diesen fest.
-     SolidColorOnly = (mFlags And CC_SOLIDCOLOR)
+     SolidColorOnly = (m_Flags And CC_SOLIDCOLOR)
 End Property
 Public Property Let SolidColorOnly(ByVal Value As Boolean)
-    mFlags = mFlags Or CC_SOLIDCOLOR
+    m_Flags = m_Flags Or CC_SOLIDCOLOR
     If Not Value Then
-        mFlags = mFlags Xor CC_SOLIDCOLOR
+        m_Flags = m_Flags Xor CC_SOLIDCOLOR
     End If
 End Property
 
@@ -204,7 +204,7 @@ End Function
 Public Function ShowDialog(Optional Frm As Variant) As VbMsgBoxResult
     ReDim CancelColors(0 To MaxCustomColors - 1) As Long
 Try: On Error GoTo Catch
-    CancelColors() = mCustomColors()
+    CancelColors() = m_CustomColors()
     Dim ahWndOwner As Long
     If IsMissing(Frm) Then
         ahWndOwner = GetActiveWindow
@@ -221,17 +221,17 @@ Try: On Error GoTo Catch
 '#Else
 '        .hInstance = App.hInstance
 '#End If
-        .rgbResult = mColor 'RGB(0, 255, 0) 'Farbe voreinstellen
-        .lpCustColors = VarPtr(mCustomColors(0)) 'Benutzerdefinierte Farben zuweisen
-        .Flags = mFlags
+        .rgbResult = m_Color 'RGB(0, 255, 0) 'Farbe voreinstellen
+        .lpCustColors = VarPtr(m_CustomColors(0)) 'Benutzerdefinierte Farben zuweisen
+        .Flags = m_Flags
         .lCustData = 0&
         .lpfnHook = 0&
-        .lpTemplateName = StrPtr(mTemplateName) '"" '0&
+        .lpTemplateName = StrPtr(m_TemplateName) '"" '0&
     End With
     ShowDialog = ChooseColorW(ChCl)
-    mColor = ChCl.rgbResult
+    m_Color = ChCl.rgbResult
     If ShowDialog = 0 Then
-        mCustomColors() = CancelColors()
+        m_CustomColors() = CancelColors()
         CheckMessError
     End If
     Exit Function
@@ -242,22 +242,22 @@ End Function
 Private Sub CheckMessError()
     Dim hr As Long: hr = CommDlgExtendedError
     If hr = 0 Then Exit Sub
-    Dim s As String
+    Dim S As String
     Select Case hr
-    Case CDERR_STRUCTSIZE:      s = "STRUCTSIZE"
-    Case CDERR_INITIALIZATION:  s = "INITIALIZATION"
-    Case CDERR_NOTEMPLATE:      s = "NOTEMPLATE"
-    Case CDERR_NOHINSTANCE:     s = "NOHINSTANCE"
-    Case CDERR_LOADSTRFAILURE:  s = "LOADSTRFAILURE"
-    Case CDERR_FINDRESFAILURE:  s = "FINDRESFAILURE"
-    Case CDERR_LOADRESFAILURE:  s = "LOADRESFAILURE"
-    Case CDERR_LOCKRESFAILURE:  s = "LOCKRESFAILURE"
-    Case CDERR_MEMALLOCFAILURE: s = "MEMALLOCFAILURE"
-    Case CDERR_MEMLOCKFAILURE:  s = "MEMLOCKFAILURE"
-    Case CDERR_NOHOOK:          s = "NOHOOK"
-    Case CDERR_DIALOGFAILURE:   s = "DIALOGFAILURE"
+    Case CDERR_STRUCTSIZE:      S = "STRUCTSIZE"
+    Case CDERR_INITIALIZATION:  S = "INITIALIZATION"
+    Case CDERR_NOTEMPLATE:      S = "NOTEMPLATE"
+    Case CDERR_NOHINSTANCE:     S = "NOHINSTANCE"
+    Case CDERR_LOADSTRFAILURE:  S = "LOADSTRFAILURE"
+    Case CDERR_FINDRESFAILURE:  S = "FINDRESFAILURE"
+    Case CDERR_LOADRESFAILURE:  S = "LOADRESFAILURE"
+    Case CDERR_LOCKRESFAILURE:  S = "LOCKRESFAILURE"
+    Case CDERR_MEMALLOCFAILURE: S = "MEMALLOCFAILURE"
+    Case CDERR_MEMLOCKFAILURE:  S = "MEMLOCKFAILURE"
+    Case CDERR_NOHOOK:          S = "NOHOOK"
+    Case CDERR_DIALOGFAILURE:   S = "DIALOGFAILURE"
     End Select
-    If Len(s) Then
-        MsgBox s
+    If Len(S) Then
+        MsgBox S
     End If
 End Sub
